# asc-swift

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .spi.yml  .swift-format  .swift-format.json  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  Package.swift  Package@swift-6.0.swift  README.md
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
.github/workflows/: bazel.yml  check_api.yml  ci.yml  release.yml  swiftpm.yml  xcodebuild.yml
.swiftpm/xcode/xcshareddata/xcschemes/: AppStoreAPI.xcscheme  AppStoreConnect-Package.xcscheme  AppStoreConnect.xcscheme  EnterpriseProgram.xcscheme
AppStoreConnect.xcworkspace/: contents.xcworkspacedata
Examples/: Package.swift
Examples/.swiftpm/xcode/xcshareddata/xcschemes/: simple.xcscheme
Examples/ExamplesCore/: Environment.swift
Examples/Utilities/: BUILD.bazel  EnvAuthenticator.swift  Environment.swift
Examples/bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel  MyASCTool.swift
Examples/invite_beta_tester/: BUILD.bazel  InviteBetaTester.swift
Examples/invite_user/: BUILD.bazel  InviteUser.swift
Examples/list_builds/: BUILD.bazel  ListBuilds.swift
Examples/register_device/: BUILD.bazel  RegisterDevice.swift
Examples/register_devices/: RegisterDevices.swift
Examples/sales_finance_reports/: BUILD.bazel  SalesFinanceReports.swift
Examples/simple/: Example.swift
Examples/upload_preview/: BUILD.bazel  UploadPreview.swift
Examples/upload_screenshot/: BUILD.bazel  UploadScreenshot.swift
Plugins/CreateAPI/: .create-api.yml  CreateAPI.swift
Sources/: BUILD.bazel
Sources/AppStoreAPI/: .create-api.yml  BUILD.bazel  Request.swift  UploadOperations.swift  patches.jq
Sources/AppStoreAPI/AppStoreAPI.docc/: AppStoreAPI.md
Sources/AppStoreAPI/AppStoreAPI.docc/Articles/: UploadingFiles.md
Sources/AppStoreAPI/AppStoreAPI.docc/Extensions/: AppStoreConnectClient.md
Sources/AppStoreConnect/: .create-api.yml  AppStoreConnect.swift  AppStoreConnectClient.swift  BUILD.bazel  app_store_connect_api_2.1_openapi.json
Sources/AppStoreConnect/AppStoreConnect.docc/: AppStoreConnect.md
Sources/AppStoreConnect/AppStoreConnect.docc/Articles/: GettingStarted.md  UploadingFiles.md
Sources/AppStoreConnect/AppStoreConnect.docc/Extensions/: AppStoreConnectClient.md  Authenticator.md  Transport.md
Sources/AppStoreConnect/Authentication/: Authenticator.swift  JWT.swift
Sources/AppStoreConnect/Entities/: AnyJSON.swift  ErrorLinks.swift  ErrorResponse.swift  ErrorSourceParameter.swift  ErrorSourcePointer.swift
Sources/AppStoreConnect/Internal/: Exports.swift
Sources/AppStoreConnect/Networking/: API.swift  Configuration.swift  Formatters.swift  JSONValue.swift  Pagination.swift  Request.swift  Resource.swift  Response.swift  RetryStrategy.swift  Transport.swift  URL++.swift
Sources/AppStoreConnect/Specification/: .create-api.yml
Sources/EnterpriseAPI/: BUILD.bazel
Sources/_Specification/: .create-api.yml  Request.swift  app_store_connect_api_3.0_openapi.json  app_store_connect_api_3.1_openapi.json  app_store_connect_api_3.2_openapi.json
Tests/AppStoreAPITests/: BUILD.bazel  UploadOperationsTests.swift
Tests/AppStoreConnectTests/: AppStoreConnectClientTests.swift  AppStoreConnectTests.swift  BUILD.bazel  FormattersTests.swift  JWTTests.swift  RequestTests.swift  TransportTests.swift
Tests/AppStoreConnectTests/Authentication/: JWTTests.swift
Tests/AppStoreConnectTests/Networking/: FormattersTests.swift  JSONValueTests.swift  RequestTests.swift  TransportTests.swift
Tests/AppStoreConnectTests/Utilities/: MockAuthenticator.swift  MockContext.swift  MockData.swift  MockTransport.swift  URL+AppStoreConnect.swift  XCTAsserts.swift  XCTestCase++.swift
Tests/Mocks/: BUILD.bazel  MockAuthenticator.swift  MockContext.swift  MockData.swift  MockTransport.swift  URL+AppStoreConnect.swift  XCTAsserts.swift
bazel/: BUILD.bazel  extensions.bzl
bazel/specs/: BUILD.bazel  versions.bzl
bazel/specs/com_apple_app_store_connect_api/: BUILD.overlay  app_store_connect_api_3.7_openapi.json  patches.awk
bazel/specs/com_apple_enterprise_program_api/: BUILD.overlay  enterprise_program_api_1.0_openapi.json
bazel/tools/create_api/: BUILD.bazel  create_api.tpl.sh
