load("@rules_swift//swift:swift_library_group.bzl", "swift_library_group")

swift_library_group(
    name = "AppStoreConnect",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/AppStoreAPI",
        "//Sources/AppStoreConnect",
    ],
)

swift_library_group(
    name = "EnterpriseProgram",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/AppStoreConnect",
        "//Sources/EnterpriseAPI",
    ],
)

alias(
    name = "update",
    actual = "//bazel:update_specs",
    tags = ["manual"],
)
