load("@rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Utilities",
    srcs = [
        "EnvAuthenticator.swift",
        "Environment.swift",
    ],
    module_name = "Utilities",
    visibility = ["//Examples:__subpackages__"],
    deps = [
        "//:AppStoreConnect",
    ],
)
