load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "invite_user",
    srcs = ["InviteUser.swift"],
    deps = [
        "//:AppStoreConnect",
        "//:EnterpriseProgram",
        "//Examples/Utilities",
        "@com_github_apple_swift_argument_parser//:ArgumentParser",
    ],
)
