load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "sales_finance_reports",
    srcs = ["SalesFinanceReports.swift"],
    deps = [
        "//:AppStoreConnect",
        "//Examples/Utilities",
        "@com_github_apple_swift_argument_parser//:ArgumentParser",
    ],
)
