load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "upload_preview",
    srcs = ["UploadPreview.swift"],
    deps = [
        "//:AppStoreConnect",
        "//Examples/Utilities",
        "@com_github_apple_swift_argument_parser//:ArgumentParser",
        "@com_github_apple_swift_crypto//:Crypto",
    ],
)
