load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "upload_screenshot",
    srcs = ["UploadScreenshot.swift"],
    deps = [
        "//:AppStoreConnect",
        "//Examples/Utilities",
        "@swiftpkg_swift_argument_parser//:ArgumentParser",
        "@swiftpkg_swift_crypto//:Crypto",
    ],
)
