load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "upload_screenshot",
    srcs = ["UploadScreenshot.swift"],
    deps = [
        "//:AppStoreConnect",
        "//Examples/Utilities",
        "@com_github_apple_swift_argument_parser//:ArgumentParser",
        "@com_github_apple_swift_crypto//:Crypto",
    ],
)
