load("@rules_apple//apple:docc.bzl", "docc_archive")
load("@rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "AppStoreAPI",
    package_name = "AppStoreConnect",
    srcs = ["UploadOperations.swift"] + glob([
        "Generated/**/*.swift",
    ]),
    data = glob(["AppStoreAPI.docc/**/*.md"]),
    module_name = "AppStoreAPI",
    visibility = ["//:__subpackages__"],
    deps = [
        "//Sources/AppStoreConnect",
        "@com_github_createapi_urlqueryencoder//:URLQueryEncoder",
    ],
)

docc_archive(
    name = "AppStoreAPI.doccarchive",
    dep = ":AppStoreAPI",
    fallback_bundle_identifier = "com.sky.appstoreapi",
    fallback_bundle_version = "1.0.0",
    fallback_display_name = "AppStoreAPI",
)
