load("@rules_swift//swift:swift_test.bzl", "swift_test")

swift_test(
    name = "AppStoreAPITests",
    package_name = "AppStoreConnect",
    srcs = glob(["*.swift"]),
    module_name = "AppStoreAPITests",
    deps = [
        "//Sources/AppStoreAPI",
        "//Sources/AppStoreConnect",
        "//Tests/Mocks",
    ],
)
