load("@rules_swift//swift:swift_test.bzl", "swift_test")

swift_test(
    name = "AppStoreConnectTests",
    package_name = "AppStoreConnect",
    size = "small",
    srcs = glob(["*.swift"]),
    module_name = "AppStoreConnectTests",
    deps = [
        "//Sources/AppStoreConnect",
        "//Tests/Mocks",
    ],
)
