load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load(":versions.bzl", "APP_STORE_CONNECT_API_SPEC_VERSION", "ENTERPRISE_PROGRAM_API_SPEC_VERSION")

write_source_files(
    name = "specs",
    additional_update_targets = [
        "@com_apple_app_store_connect_api//:write_spec",
        "@com_apple_enterprise_program_api//:write_spec",
    ],
    visibility = ["//bazel:__pkg__"],
)

filegroup(
    name = "app_store_connect_api_spec",
    srcs = ["com_apple_app_store_connect_api/app_store_connect_api_%s_openapi.json" % APP_STORE_CONNECT_API_SPEC_VERSION],
    visibility = ["//bazel/tools/create_api:__pkg__"],
)

filegroup(
    name = "enterprise_program_api_spec",
    srcs = ["com_apple_enterprise_program_api/enterprise_program_api_%s_openapi.json" % ENTERPRISE_PROGRAM_API_SPEC_VERSION],
    visibility = ["//bazel/tools/create_api:__pkg__"],
)

filegroup(
    name = "app_store_connect_api_patches_awk_prog",
    srcs = ["com_apple_app_store_connect_api/patches.awk"],
    visibility = ["@com_apple_app_store_connect_api//:__pkg__"],
)
